# Shard

./: .gitignore  CMakeLists.txt  README.md
include/: shard.h  shard.hpp
src/: main.cpp  shard.cpp
src/commands/: config.cpp  install.cpp  list.cpp
